--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "I've been wanting to get back to writing often for a long time. My old jekyll based blog is slow and I'm not really using ruby anymore so I always forget the commands. I'd like to host myself and don't want to be preaching on every post, so medium or similar is out of the question.",
   "main": "index.js",
   "dependencies": {
+    "handlebars": "^4.0.11",
     "metalsmith": "^2.3.0",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-layouts": "^1.8.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-register-helpers": "^0.4.0",
     "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {},
