--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "01-metalsmith",
-  "version": "1.0.0",
-  "description": "I've been wanting to get back to writing often for a long time. My old jekyll based blog is slow and I'm not really using ruby anymore so I always forget the commands. I'd like to host myself and don't want to be preaching on every post, so medium or similar is out of the question.",
-  "main": "index.js",
-  "dependencies": {
-    "handlebars": "^4.0.11",
-    "metalsmith": "^2.3.0",
-    "metalsmith-collections": "^0.9.0",
-    "metalsmith-layouts": "^1.8.1",
-    "metalsmith-markdown": "^0.2.1",
-    "metalsmith-permalinks": "^0.5.0",
-    "metalsmith-register-helpers": "^0.4.0",
-    "pug": "^2.0.0-rc.4"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jesusgollonet/notes.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jesusgollonet/notes/issues"
-  },
-  "homepage": "https://github.com/jesusgollonet/notes#readme"
+    "name": "01-metalsmith",
+    "version": "1.0.0",
+    "description": "I've been wanting to get back to writing often for a long time. My old jekyll based blog is slow and I'm not really using ruby anymore so I always forget the commands. I'd like to host myself and don't want to be preaching on every post, so medium or similar is out of the question.",
+    "main": "index.js",
+    "dependencies": {
+        "handlebars": "^4.0.11",
+        "metalsmith": "^2.3.0",
+        "metalsmith-collections": "^0.9.0",
+        "metalsmith-layouts": "^1.8.1",
+        "metalsmith-markdown": "^0.2.1",
+        "metalsmith-permalinks": "^0.5.0",
+        "metalsmith-register-helpers": "^0.4.0",
+        "pug": "^2.0.0-rc.4"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "start": "npx nodemon -e js,md & (cd build && npx browser-sync start --server --files *.html)",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jesusgollonet/notes.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/jesusgollonet/notes/issues"
+    },
+    "homepage": "https://github.com/jesusgollonet/notes#readme"
 }
