--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "I've been wanting to get back to writing often for a long time. My old jekyll based blog is slow and I'm not really using ruby anymore so I always forget the commands. I'd like to host myself and don't want to be preaching on every post, so medium or similar is out of the question.",
     "main": "index.js",
     "dependencies": {
+        "dotenv": "^4.0.0",
         "handlebars": "^4.0.11",
         "metalsmith": "^2.3.0",
         "metalsmith-collections": "^0.9.0",
@@ -13,7 +14,10 @@
         "metalsmith-register-helpers": "^0.4.0",
         "pug": "^2.0.0-rc.4"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "browser-sync": "^2.18.13",
+        "nodemon": "^1.12.1"
+    },
     "scripts": {
         "start": "npx nodemon -e js,md & (cd build && npx browser-sync start --server --files *.html)",
         "test": "echo \"Error: no test specified\" && exit 1"
