--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "nodemon": "^1.12.1"
     },
     "scripts": {
-        "start": "npx nodemon -e js,md & (cd build && npx browser-sync start --server --files *.html)",
+        "start": "npx nodemon -e js,md,html & (cd build && npx browser-sync start --server --files *.html)",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
